--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -3,20 +3,22 @@ on: push
 jobs:
   lint:
     runs-on: ubuntu-latest
-    - name: Get code
-      uses: actions/checkout@v3
-    - name: Install dependencies
-      run: npm ci
-    - name: Lint
-      run: npm run lint
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
   test:
     runs-on: ubuntu-latest
-    - name: Get code
-      uses: actions/checkout@v3
-    - name: Install dependencies
-      run: npm ci
-    - name: Test code
-      run: npm run test
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Test code
+        run: npm run test
   deploy:
     runs-on: ubuntu-latest
     steps:
